# disk-utility

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
frontend/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
