[package]
name = "disk-utility"
version = "0.1.0"
edition = "2021"

[lib]
name = "disk_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
charming = "0.6"
rfd = "0.15"
